classDiagram
    class Game {
        +List Players
        +int CurrentKingPlayerIndex
        +Player KingPlayer
        +List Questions
        +int CurrentRound
        +DifficultyLevel Difficulty
        +int MaxRounds
        +bool IsGameOver
        +GetScoreboard()
        +AddPlayer(player)
    }
    
    class Player {
        +string Name
        +int Score
        +bool IsKingPlayer
        +int TotalGamesPlayed
        +int TotalCorrectGuesses
        +double GuessAccuracy
    }
    
    class Question {
        +string Text
        +QuestionCategory Category
        +DateTime CreatedAt
    }
    
    class GameQuestion {
        +Question Question
        +string KingAnswer
        +Dictionary PlayerAnswers
        +Dictionary Results
        +bool IsCompleted
    }
    
    class GameHistory {
        +string GameId
        +DateTime StartTime
        +DateTime EndTime
        +List Players
        +DifficultyLevel Difficulty
        +Dictionary FinalScores
        +int TotalRounds
        +TimeSpan Duration
    }
    
    class DifficultyLevel {
        <<enumeration>>
        Easy
        Medium
        Hard
    }
    
    class QuestionCategory {
        <<enumeration>>
        Relationships
        Hobbies
        Childhood
        Future
        Preferences
        Values
    }
    
    Game "1" --> "*" Player : contains
    Game "1" --> "*" GameQuestion : contains
    Game --> DifficultyLevel : has
    GameQuestion --> Question : references
    Question --> QuestionCategory : categorized
    GameHistory --> "*" Player : records
    GameHistory --> DifficultyLevel : played
